java-20, create uri directly, not via url.